  to empty string
* aspell: add support of enchant library (patch #6858)
* irc: add support of special variables $nick/$channel/$server in commands
  /allchan and /allserv
* irc: add option irc.look.nick_color_hash: hash algorithm to find nick color
  (patch #8062)
* irc: fix multiple nicks in command /query (separated by commas): open one
  buffer per nick
* relay: fix binding to an IP address (bug #39119)
* xfer: fix compilation on OpenBSD (bug #39071)

Version 0.4.1 (2013-05-20)
--------------------------

* core: fix display of long lines without time (message beginning with two tabs)
* core: make nick prefix/suffix dynamic (not stored in the line): move options
  irc.look.nick_{prefix|suffix} to weechat.look.nick_{prefix|suffix} and options
  irc.color.nick_{prefix|suffix} to weechat.color.chat_nick_{prefix|suffix},
  add new options weechat.look.prefix_align_more_after,
  weechat.look.prefix_buffer_align_more_after, logger.file.nick_{prefix|suffix}
  (bug #37531)
* core: reset scroll in window before zooming on a merged buffer (bug #38207)
* core: install icon file (patch #7972)
* core: fix refresh of item "completion": clear it after any action that is
  changing content of command line and after switch of buffer (bug #38214)
* core: add support of multiple layouts (task #11274)
* core: add signals nicklist_{group|nick}_removing and hsignals
  nicklist_{group|nick}_{added|removing|changed}
* core: add count for groups, nicks, and total in nicklist
* core: allow read of array in hdata without using index
* core: add option "dirs" for command /debug
* core: fix detection of iconv with cmake on OS X (bug #38321)
* core: add signal "window_opened" (task #12464)
* core: fix structures before buffer data when a buffer is closed
* core: fix refresh of line after changes with hdata_update (update flag
  "displayed" according to filters)
* core: fix detection of python on Ubuntu Raring
* core: fix hidden lines for messages without date when option